# Final-project-team-13

./: 2sales_by_year.py  README.md  best_release_month.py  casey_group1_brief.ipynb  casey_group1_freak.ipynb  console.data.py  data_clean.py  developer_success.py  popular_titles.py  pyproject.toml  sales_by_year.py  vgchartz-2024.parquet  video_game_sales.py
