[project]
name = "lab-05"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "marimo[recommended]>=0.11.12",
    "nycflights13>=0.0.3",
    "plotly[express]>=6.0.0",
    "polars[all]>=1.23.0",
]

[tool.marimo.runtime]
output_max_bytes = 10_000_000
